--- a/templates/base.html
+++ b/templates/base.html
@@ -151,6 +151,7 @@
     <script src="{{ url_for('static', filename='js/items_grid.js') }}"></script>
 
     <script src="{{ url_for('static', filename='js/intelligence.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/realtime.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 
 
