--- a/templates/base.html
+++ b/templates/base.html
@@ -67,9 +67,9 @@
                 <i class="bi bi-wallet2"></i> Collections
             </a>
 
-            <a href="/bills"
+            <a href="/expenses"
                 class="sidebar-link {% if request.path.startswith('/bills') %}bg-primary text-white{% endif %}">
-                <i class="bi bi-file-earmark-text"></i> Fixed Expenses
+                <i class="bi bi-file-earmark-text"></i> Expenses
             </a>
 
             <hr class="border-secondary my-3">
