--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,7 @@
             </a>
 
             <a href="/invoices"
-                class="sidebar-link {% if request.path.startswith('/pos/invoices') %}bg-primary text-white{% endif %}">
+                class="sidebar-link {% if request.path.startswith('/invoices') %}bg-primary text-white{% endif %}">
                 <i class="bi bi-receipt"></i> Invoices
             </a>
 
